--- a/work.html
+++ b/work.html
@@ -93,10 +93,10 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="./index.html">01 : Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="./works.html">02 : Works</a></li>
-          <li class="nav-item"><a class="nav-link" href="./about.html">03 : About me</a></li>
-          <li class="nav-item"><a class="nav-link" href="./contact.html">04 : Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="./index.html">01 : Anasayfa</a></li>
+          <li class="nav-item"><a class="nav-link" href="./works.html">02 : Hizmetler</a></li>
+          <li class="nav-item"><a class="nav-link" href="./about.html">03 : Hakkımızda</a></li>
+          <li class="nav-item"><a class="nav-link" href="./contact.html">04 : İletişim</a></li>
         </ul>
       </div>
     </nav>
